--- a/default.html
+++ b/default.html
@@ -3,8 +3,8 @@
         <title>
             first javascript
         </title>
-        <script type="text/javascript" src="first.js">
-            var num = 16 //creating the variable
+        <script type="text/javascript">
+
         </script>
     </head>
     <body>
